--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,8 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.impersonate{
+    width: '32px';
+    border: 4px red solid;
+}
